updating prefs: default URL, button navigation (not swipe), delete uploaded forms

--- a/collect_app/src/main/res/xml/aggregate_preferences.xml
+++ b/collect_app/src/main/res/xml/aggregate_preferences.xml
@@ -5,7 +5,7 @@
         android:title="@string/aggregate_preferences" >
         <EditTextPreference
             android:id="@+id/server_url"
-            android:defaultValue="@string/default_server_url"
+            android:defaultValue="https://post-aguaclara.appspot.com/"
             android:dialogTitle="@string/change_server_url"
             android:inputType="textNoSuggestions"
             android:key="server_url"
