--- a/collect_app/src/main/res/xml/preferences.xml
+++ b/collect_app/src/main/res/xml/preferences.xml
@@ -70,7 +70,7 @@
             android:title="@string/constraint_behavior" />
        <ListPreference
             android:id="@+id/navigation"
-            android:defaultValue="swipe"
+            android:defaultValue="buttons"
             android:dialogTitle="@string/navigation"
             android:entries="@array/navigation_entries"
             android:entryValues="@array/navigation_entry_values"
@@ -95,7 +95,7 @@
             android:key="delete_send"
             android:summary="@string/delete_after_send_summary"
             android:title="@string/delete_after_send"
-            android:defaultValue="false"/>
+            android:defaultValue="true"/>
         <CheckBoxPreference
             android:id="@+id/high_resolution"
             android:defaultValue="true"
